iptables/iptables-rules-restore-file.txt
# Generated by iptables-save v1.4.21 on Wed May  4 16:47:01 2016
*mangle
:PREROUTING ACCEPT [2756732:423207156]
:INPUT ACCEPT [131002:30474919]
:FORWARD ACCEPT [2640763:426647077]
:OUTPUT ACCEPT [97980:24268674]
:POSTROUTING ACCEPT [2738512:450899775]
COMMIT
# Completed on Wed May  4 16:47:01 2016
# Generated by iptables-save v1.4.21 on Wed May  4 16:47:01 2016
*nat
:PREROUTING ACCEPT [1179:88910]
:INPUT ACCEPT [283:20094]
:OUTPUT ACCEPT [53:3250]
:POSTROUTING ACCEPT [513:42952]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p udp -m udp --dport 50020 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p udp -m udp --dport 50010 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p udp -m udp --dport 50000 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p udp -m udp --dport 8125 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 8086 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 8083 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p udp -m udp --dport 6000 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 3000 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p udp -m udp --dport 50020 -j DNAT --to-destination 172.17.0.2:50020
-A DOCKER ! -i docker0 -p udp -m udp --dport 50010 -j DNAT --to-destination 172.17.0.2:50010
-A DOCKER ! -i docker0 -p udp -m udp --dport 50000 -j DNAT --to-destination 172.17.0.2:50000
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 22222 -j DNAT --to-destination 172.17.0.2:22
-A DOCKER ! -i docker0 -p udp -m udp --dport 8125 -j DNAT --to-destination 172.17.0.2:8125
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 8086 -j DNAT --to-destination 172.17.0.2:8086
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 8083 -j DNAT --to-destination 172.17.0.2:8083
-A DOCKER ! -i docker0 -p udp -m udp --dport 6000 -j DNAT --to-destination 172.17.0.2:6000
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 3000 -j DNAT --to-destination 172.17.0.2:3000
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.17.0.2:80
COMMIT
# Completed on Wed May  4 16:47:01 2016
# Generated by iptables-save v1.4.21 on Wed May  4 16:47:01 2016
*filter
:INPUT ACCEPT [5724:1175889]
:FORWARD ACCEPT [115:9152]
:OUTPUT ACCEPT [3735:968021]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A INPUT -i t3_spine01_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_spine01_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_spine01_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_spine01_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_spine02_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_spine02_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_spine02_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_spine02_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_leaf01_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_leaf01_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_leaf01_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_leaf01_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_leaf02_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_leaf02_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_leaf02_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_leaf02_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_leaf03_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_leaf03_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_leaf03_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_leaf03_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_leaf99_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_leaf99_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_leaf99_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_leaf99_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t6_d -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t6_d -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t6_d -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t6_d -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t6_vqf87_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t6_vqf87_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t6_vqf87_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t6_vqf87_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t5_private_br0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t5_private_br0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t5_private_br0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t5_private_br0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t5_br20 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t5_br20 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t5_br20 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t5_br20 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t5_br19 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t5_br19 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t5_br19 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t5_br19 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br20 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br20 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br20 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br20 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br19 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br19 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br19 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br19 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br18 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br18 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br18 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br18 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br17 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br17 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br17 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br17 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br16 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br16 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br16 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br16 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br15 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br15 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br15 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br15 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br14 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br14 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br14 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br14 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br13 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br13 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br13 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br13 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br12 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br12 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br12 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br12 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br11 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br11 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br11 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br11 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br10 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br10 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br10 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br10 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br9 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br9 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br9 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br9 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br8 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br8 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br8 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br8 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br7 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br7 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br7 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br7 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br6 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br6 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br6 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br6 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_br5 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_br5 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_br5 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_br5 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_vmx01_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_vmx01_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_vmx01_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_vmx01_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_vmx02_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_vmx02_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_vmx02_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_vmx02_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx01_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx01_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx01_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx01_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx02_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx02_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx02_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx02_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx03_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx03_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx03_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx03_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx04_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx04_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx04_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx04_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx05_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx05_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx05_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx05_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_d -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_d -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_d -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_d -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx99_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx99_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t3_vqfx99_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t3_vqfx99_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br14 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br14 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br14 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br14 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br13 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br13 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br13 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br13 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br12 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br12 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br12 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br12 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br11 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br11 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br11 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br11 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br10 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br10 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br10 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br10 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br9 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br9 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br9 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br9 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br8 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br8 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br8 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br8 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br7 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br7 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br7 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br7 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br6 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br6 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br6 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br6 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br5 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br5 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br5 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br5 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br4 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br4 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br4 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br4 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br3 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br3 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br3 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br3 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br2 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br2 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br2 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br2 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_br1 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_br1 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_br1 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_br1 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_vmx01_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_vmx01_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_vmx01_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_vmx01_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_vmx02_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_vmx02_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_vmx02_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_vmx02_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_vQFX01_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_vQFX01_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_vQFX01_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_vQFX01_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_vQFX02_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_vQFX02_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_vQFX02_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_vQFX02_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_vQFX03_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_vQFX03_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_vQFX03_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_vQFX03_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_vQFX04_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_vQFX04_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_vQFX04_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_vQFX04_c -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_d -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_d -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_d -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_d -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i t1_vQFX05_c -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i t1_vQFX05_c -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i t1_vQFX05_c -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i t1_vQFX05_c -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -i t3_spine01_c -o t3_spine01_c -j ACCEPT
-A FORWARD -o t3_spine01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_spine01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_spine02_c -o t3_spine02_c -j ACCEPT
-A FORWARD -o t3_spine02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_spine02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_leaf01_c -o t3_leaf01_c -j ACCEPT
-A FORWARD -o t3_leaf01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_leaf01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_leaf02_c -o t3_leaf02_c -j ACCEPT
-A FORWARD -o t3_leaf02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_leaf02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_leaf03_c -o t3_leaf03_c -j ACCEPT
-A FORWARD -o t3_leaf03_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_leaf03_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_leaf99_c -o t3_leaf99_c -j ACCEPT
-A FORWARD -o t3_leaf99_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_leaf99_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t6_d -o t6_d -j ACCEPT
-A FORWARD -o t6_d -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t6_d -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t6_vqf87_c -o t6_vqf87_c -j ACCEPT
-A FORWARD -o t6_vqf87_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t6_vqf87_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t5_private_br0 -o t5_private_br0 -j ACCEPT
-A FORWARD -o t5_private_br0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t5_private_br0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t5_br20 -o t5_br20 -j ACCEPT
-A FORWARD -o t5_br20 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t5_br20 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t5_br19 -o t5_br19 -j ACCEPT
-A FORWARD -o t5_br19 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t5_br19 -j REJECT --reject-with icmp-port-unreachable

# fixing port forward for space and outgoing ssh for opennti docker
-A FORWARD -s 192.168.122.0/24 -d 172.17.0.0/16 -i virbr0 -o docker0 -j ACCEPT
-A FORWARD -s 172.17.0.0/16 -d 192.168.122.0/24 -i docker0 -o virbr0 -j ACCEPT

-A FORWARD -s 0.0.0.0/0 -d 192.168.122.113/32 -i br0 -o virbr0 -j ACCEPT
-A FORWARD -s 0.0.0.0/0 -d 192.168.122.22/32 -i br0 -o virbr0 -j ACCEPT

-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br20 -o t3_br20 -j ACCEPT
-A FORWARD -o t3_br20 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br20 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br19 -o t3_br19 -j ACCEPT
-A FORWARD -o t3_br19 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br19 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br18 -o t3_br18 -j ACCEPT
-A FORWARD -o t3_br18 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br18 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br17 -o t3_br17 -j ACCEPT
-A FORWARD -o t3_br17 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br17 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br16 -o t3_br16 -j ACCEPT
-A FORWARD -o t3_br16 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br16 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br15 -o t3_br15 -j ACCEPT
-A FORWARD -o t3_br15 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br15 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br14 -o t3_br14 -j ACCEPT
-A FORWARD -o t3_br14 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br14 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br13 -o t3_br13 -j ACCEPT
-A FORWARD -o t3_br13 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br13 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br12 -o t3_br12 -j ACCEPT
-A FORWARD -o t3_br12 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br12 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br11 -o t3_br11 -j ACCEPT
-A FORWARD -o t3_br11 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br11 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br10 -o t3_br10 -j ACCEPT
-A FORWARD -o t3_br10 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br10 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br9 -o t3_br9 -j ACCEPT
-A FORWARD -o t3_br9 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br9 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br8 -o t3_br8 -j ACCEPT
-A FORWARD -o t3_br8 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br8 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br7 -o t3_br7 -j ACCEPT
-A FORWARD -o t3_br7 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br7 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br6 -o t3_br6 -j ACCEPT
-A FORWARD -o t3_br6 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br6 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br5 -o t3_br5 -j ACCEPT
-A FORWARD -o t3_br5 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_br5 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vmx01_c -o t3_vmx01_c -j ACCEPT
-A FORWARD -o t3_vmx01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vmx01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vmx02_c -o t3_vmx02_c -j ACCEPT
-A FORWARD -o t3_vmx02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vmx02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx01_c -o t3_vqfx01_c -j ACCEPT
-A FORWARD -o t3_vqfx01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx02_c -o t3_vqfx02_c -j ACCEPT
-A FORWARD -o t3_vqfx02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx03_c -o t3_vqfx03_c -j ACCEPT
-A FORWARD -o t3_vqfx03_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx03_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx04_c -o t3_vqfx04_c -j ACCEPT
-A FORWARD -o t3_vqfx04_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx04_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx05_c -o t3_vqfx05_c -j ACCEPT
-A FORWARD -o t3_vqfx05_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx05_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_d -o t3_d -j ACCEPT
-A FORWARD -o t3_d -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_d -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx99_c -o t3_vqfx99_c -j ACCEPT
-A FORWARD -o t3_vqfx99_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t3_vqfx99_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br14 -o t1_br14 -j ACCEPT
-A FORWARD -o t1_br14 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br14 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br13 -o t1_br13 -j ACCEPT
-A FORWARD -o t1_br13 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br13 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br12 -o t1_br12 -j ACCEPT
-A FORWARD -o t1_br12 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br12 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br11 -o t1_br11 -j ACCEPT
-A FORWARD -o t1_br11 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br11 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br10 -o t1_br10 -j ACCEPT
-A FORWARD -o t1_br10 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br10 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br9 -o t1_br9 -j ACCEPT
-A FORWARD -o t1_br9 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br9 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br8 -o t1_br8 -j ACCEPT
-A FORWARD -o t1_br8 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br8 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br7 -o t1_br7 -j ACCEPT
-A FORWARD -o t1_br7 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br7 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br6 -o t1_br6 -j ACCEPT
-A FORWARD -o t1_br6 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br6 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br5 -o t1_br5 -j ACCEPT
-A FORWARD -o t1_br5 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br5 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br4 -o t1_br4 -j ACCEPT
-A FORWARD -o t1_br4 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br4 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br3 -o t1_br3 -j ACCEPT
-A FORWARD -o t1_br3 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br3 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br2 -o t1_br2 -j ACCEPT
-A FORWARD -o t1_br2 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br2 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br1 -o t1_br1 -j ACCEPT
-A FORWARD -o t1_br1 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_br1 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vmx01_c -o t1_vmx01_c -j ACCEPT
-A FORWARD -o t1_vmx01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vmx01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vmx02_c -o t1_vmx02_c -j ACCEPT
-A FORWARD -o t1_vmx02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vmx02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vQFX01_c -o t1_vQFX01_c -j ACCEPT
-A FORWARD -o t1_vQFX01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vQFX01_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vQFX02_c -o t1_vQFX02_c -j ACCEPT
-A FORWARD -o t1_vQFX02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vQFX02_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vQFX03_c -o t1_vQFX03_c -j ACCEPT
-A FORWARD -o t1_vQFX03_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vQFX03_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vQFX04_c -o t1_vQFX04_c -j ACCEPT
-A FORWARD -o t1_vQFX04_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vQFX04_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_d -o t1_d -j ACCEPT
-A FORWARD -o t1_d -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_d -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vQFX05_c -o t1_vQFX05_c -j ACCEPT
-A FORWARD -o t1_vQFX05_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i t1_vQFX05_c -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -o t3_spine01_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_spine02_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_leaf01_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_leaf02_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_leaf03_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_leaf99_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t6_d -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t6_vqf87_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t5_private_br0 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t5_br20 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t5_br19 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br20 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br19 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br18 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br17 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br16 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br15 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br14 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br13 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br12 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br11 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br10 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br9 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br8 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br7 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br6 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_br5 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_vmx01_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_vmx02_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_vqfx01_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_vqfx02_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_vqfx03_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_vqfx04_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_vqfx05_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_d -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t3_vqfx99_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br14 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br13 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br12 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br11 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br10 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br9 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br8 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br7 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br6 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br5 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br4 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br3 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br2 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_br1 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_vmx01_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_vmx02_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_vQFX01_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_vQFX02_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_vQFX03_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_vQFX04_c -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_d -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o t1_vQFX05_c -p udp -m udp --dport 68 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p udp -m udp --dport 50020 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p udp -m udp --dport 50010 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p udp -m udp --dport 50000 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 22 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p udp -m udp --dport 8125 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8086 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8083 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p udp -m udp --dport 6000 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 3000 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Wed May  4 16:47:01 2016
